<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/anonymous_pro"
        android:text="@string/christophy_barth"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/card"
        app:layout_constraintTop_toTopOf="@id/card" />
    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/christophy"
        android:textSize="12sp"
        android:fontFamily="@font/anonymous_pro"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/name"
        app:layout_constraintStart_toEndOf="@id/name"
        app:layout_constraintBottom_toBottomOf="@id/name"/>
    <TextView
        android:id="@+id/website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/www_mywebsite_com"
        android:textColor="#1CBF24"
        android:textSize="12sp"
        android:fontFamily="@font/anonymous_pro"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="@id/name"
        />
    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lives_in_grace_bill_street_eket_nigeria"
        android:textSize="12sp"
        android:fontFamily="@font/anonymous_pro"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/website"
        app:layout_constraintStart_toStartOf="@id/website"
        />
    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/works_at_fhenix_africa"
        android:textSize="12sp"
        android:fontFamily="@font/anonymous_pro"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/address"
        app:layout_constraintStart_toStartOf="@id/address"
        />
    <ImageView
        android:id="@+id/ic_phone"
        android:layout_width="30dp"
        android:layout_height="30dp"
        tools:src="@drawable/icon_phone_call"
        app:layout_constraintEnd_toEndOf="@id/card"
        app:layout_constraintBottom_toBottomOf="@id/card"
        android:layout_margin="15dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>